Tue Feb 15 14:03:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c TODO:
	- improve support for getting port on mssql2k (mainly using clusters)

Tue Feb 15 10:07:12 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* src/ctlib/ct.c: fix possible client buffer overflow
	* src/odbc/odbc.c: correctly free dynamic if fails
	* src/tds/login.c: comment

Mon Feb 14 13:44:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/.cvsignore doc/Makefile.am:
	- use less temporary files

Fri Feb 11 14:12:30 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/cstypes.h include/ctlib.h:
	* include/ctpublic.h include/tds.h src/ctlib/cs.c:
	* src/ctlib/ct.c src/ctlib/unittests/ct_cursor.c:
	* src/ctlib/unittests/rpc_ct_setparam.c:
	* src/tds/login.c src/tds/mem.c src/tds/query.c:
	* src/tds/token.c src/ctlib/unittests/Makefile.am:
	* src/ctlib/unittests/ct_dynamic.c(added):
	- applied Bill Thompson patch:
	 - extra cursor functionality
	 - support for ct_dynamic()
	 - full ct_cancel implementation
	 - Alex Kiesel patch for CS_SERVERADDR etc.

Wed Feb  9 20:44:55 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/unittests/dynamic1.c:
	- better fix for leak on dynamics and Sybase

Wed Feb  9 20:17:53 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c src/odbc/unittests/convert_error.c:
	* src/odbc/unittests/raiserror.c src/odbc/unittests/timeout.c:
	* src/odbc/unittests/typeinfo.c src/tds/unittests/dynamic1.c:
	- fix leaks in tests

Wed Feb 9 11:08:02 EST 2005   JK Lowden <jklowden@schemamania.org>
	* include/dblib.h include/tds.h include/tdsodbc.h src/apps/bsqldb.c
	* src/apps/freebcp.c src/apps/tsql.c src/ctlib/blk.c src/ctlib/cs.c
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c
	* src/odbc/connectparams.c src/odbc/connectparams.h src/odbc/odbc_util.c