@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.19 2005-02-09 19:47:18 freddy77 Exp $
+$Id: NEWS,v 1.20 2005-02-16 19:24:43 freddy77 Exp $
 * 0.64
 - reduce network bandwidth use on Linux and *BSD
 - do not free TDSSOCKET in tds_connect
@@ -38,6 +38,7 @@ libTDS API changes
 - add a DSTR instance_name to TDSCONNECTION
 - add tds7_get_instance_port
 - removed tds_free_all_dynamic
+- tdsdump_append now static
 
 * 0.63
 - ODBC: use tds_dstr* functions to store descriptor information
